# template

./: .pre-commit-config.yaml  Makefile  pyproject.toml
config/: variable.yaml  variable.yml
src/: process.py
src/outputs/2023-02-26/15-21-09/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-21-20/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-29-52/.hydra/: config.yaml  hydra.yaml
src/outputs/2023-02-26/15-31-58/.hydra/: config.yaml  hydra.yaml
src/outputs/2023-02-26/15-32-14/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-33-29/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-34-54/.hydra/: config.yaml  hydra.yaml
src/outputs/2023-02-26/15-35-31/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-36-37/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-37-47/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-38-31/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-38-56/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-39-31/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-40-15/.hydra/: hydra.yaml
src/outputs/2023-02-26/15-40-49/.hydra/: config.yaml  hydra.yaml
src/tests/: test_code_template.py
