[tool.poetry]
name = "code_template"
version = "0.1.0"
description = ""
authors = ["OUEDRAOGO Najibe Jean Jacques <najibe252@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"
Hydra = "^2.5"
pre-commit = "^3.1.0"
black = "^23.1.0"
isort = "^5.12.0"
interrogate = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
